--- a/src/components/OrderBook.module.css
+++ b/src/components/OrderBook.module.css
@@ -13,7 +13,7 @@
     color: green;
 }
 .table-container{
-    background-color: black !important;
+    background-color: #172d3e !important;
 }
 /* .table-container .MuiTableCell-head,.table-container .MuiTableCell-body{
     color: #fff !important;
